# slipcheck

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
examples/: README.md
examples/fixtures/: absolute.tar  setuid.tar  symlink-escape.tar  traversal.tar
scripts/: smoke.sh
src/: audit.rs  cli.rs  entry.rs  findings.rs  format.rs  gzip.rs  inflate.rs  lib.rs  main.rs  paths.rs  report.rs  scan.rs  tar.rs  testkit.rs  zip.rs
tests/: cli.rs
